<resources>
    <string name="app_name">UserAddDeleteUpdate</string>
    <string name="operation_status">operation status</string>
    <string name="firstname">FirstName</string>
    <string name="lastname">LastName</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="add_user">add user</string>
    <string name="delete_user">delete user</string>
    <string name="update_user">update user</string>
    <string name="deleted_users">deleted users</string>
    <string name="active_users">active users</string>
</resources>